// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Checkbox changes value and all related formulas 1`] = `
<style>
</style>

<div
  className="ui segment ui form"
>
  <div
    className="ui form"
  >
    <div
      className="fields"
    >
      <div
        className="eight wide field"
      >
        <div
          className="field"
        >
          <div
            className="ui checkbox"
            onChange={[Function]}
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <input
              checked={false}
              className="hidden"
              name="agree"
              onClick={[Function]}
              readOnly={true}
              tabIndex={0}
              type="checkbox"
            />
            <label>
              Agree With Terms and Conditions
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fields"
    >
      <div
        className="eight wide field"
      >
        <div
          className="field"
        >
          <div
            className="ui toggle checkbox"
            onChange={[Function]}
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <input
              checked={false}
              className="hidden"
              name="disagree"
              onClick={[Function]}
              readOnly={true}
              tabIndex={0}
              type="checkbox"
            />
            <label>
              Disagree With Terms and Conditions
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fields"
    >
      <div
        className="eight wide field"
      >
        <div
          className="field"
        >
          <div
            className="ui checkbox"
            onChange={[Function]}
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <input
              checked={false}
              className="hidden"
              name="must"
              onClick={[Function]}
              readOnly={true}
              tabIndex={0}
              type="checkbox"
            />
            <label>
              Must Agree With Terms and Conditions
            </label>
          </div>
          <div
            className="ui red pointing label"
            onClick={[Function]}
          >
            You must agree to terms and conditions
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Form Checkbox renders correctly 1`] = `
<style>
</style>

<div
  className="ui segment ui form"
>
  <div
    className="ui form"
  >
    <div
      className="fields"
    >
      <div
        className="eight wide field"
      >
        <div
          className="field"
        >
          <div
            className="ui checked checkbox"
            onChange={[Function]}
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <input
              checked={true}
              className="hidden"
              name="agree"
              onClick={[Function]}
              readOnly={true}
              tabIndex={0}
              type="checkbox"
            />
            <label>
              Agree With Terms and Conditions
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fields"
    >
      <div
        className="eight wide field"
      >
        <div
          className="field"
        >
          <div
            className="ui toggle checkbox"
            onChange={[Function]}
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <input
              checked={false}
              className="hidden"
              name="disagree"
              onClick={[Function]}
              readOnly={true}
              tabIndex={0}
              type="checkbox"
            />
            <label>
              Disagree With Terms and Conditions
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fields"
    >
      <div
        className="eight wide field"
      >
        <div
          className="field"
        >
          <div
            className="ui checkbox"
            onChange={[Function]}
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <input
              checked={false}
              className="hidden"
              name="must"
              onClick={[Function]}
              readOnly={true}
              tabIndex={0}
              type="checkbox"
            />
            <label>
              Must Agree With Terms and Conditions
            </label>
          </div>
          <div
            className="ui red pointing label"
            onClick={[Function]}
          >
            You must agree to terms and conditions
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Form Checkbox renders other 1`] = `
<style>
</style>

<div
  className="ui segment ui form"
>
  <div
    className="ui form"
  >
    <div
      className="fields"
    >
      <div
        className="eight wide field"
      >
        <div
          className="field"
        >
          <div
            className="ui checked checkbox"
            onChange={[Function]}
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <input
              checked={true}
              className="hidden"
              name="agree"
              onClick={[Function]}
              readOnly={true}
              tabIndex={0}
              type="checkbox"
            />
            <label>
              Agree With Terms and Conditions
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fields"
    >
      <div
        className="eight wide field"
      >
        <div
          className="field"
        >
          <div
            className="ui toggle checkbox"
            onChange={[Function]}
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <input
              checked={false}
              className="hidden"
              name="disagree"
              onClick={[Function]}
              readOnly={true}
              tabIndex={0}
              type="checkbox"
            />
            <label>
              Disagree With Terms and Conditions
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fields"
    >
      <div
        className="eight wide field"
      >
        <div
          className="field"
        >
          <div
            className="ui checkbox"
            onChange={[Function]}
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <input
              checked={false}
              className="hidden"
              name="must"
              onClick={[Function]}
              readOnly={true}
              tabIndex={0}
              type="checkbox"
            />
            <label>
              Must Agree With Terms and Conditions
            </label>
          </div>
          <div
            className="ui red pointing label"
            onClick={[Function]}
          >
            You must agree to terms and conditions
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
